# decarb-engineer

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
data/: demo_office.json  schneider_solutions.json
decarb/: __init__.py  catalog.py  cli.py  storage.py
decarb/agents/: __init__.py  base.py  electrify_agent.py  offline.py  orchestrator.py  reduce_agent.py  replace_agent.py  schemas.py
decarb/engineering/: __init__.py  adapters.py  carbon.py  effects.py  efficiency.py  electrify.py  factors.py  simulate.py  state.py  supply.py
decarb/models/: __init__.py  ghg.py  measure.py  roadmap.py  site.py
decarb/validation/: __init__.py  expert_gate.py
tests/: test_carbon.py  test_engineering.py  test_orchestrator.py
